--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     }
   ],
   "require": {
-    "yiisoft/yii2": "^2.0"
+    "yiisoft/yii2": "^2.0",
+    "phpunit/phpunit": "^4.8"
   },
   "autoload": {
     "files": [
