--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "light/yii2-funcational",
-  "description": "Yii2 yii2 funcational",
+  "name": "light/functions",
+  "description": "Yii2 functions",
   "license": "MIT",
   "authors": [
     {
@@ -9,7 +9,9 @@
     }
   ],
   "require": {
-    "yiisoft/yii2": "^2.0",
+    "yiisoft/yii2": "^2.0"
+  },
+  "require-dev": {
     "phpunit/phpunit": "^4.8"
   },
   "autoload": {
