--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "yiisoft/yii2": "^2.0"
+    "yiisoft/yii2": "~2.0.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.8"
