--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,16 @@ cache:
 
 # script run before anything
 before_script:
-    - composer global require "fxp/composer-asset-plugin:1.0.0"
+    - composer global require "fxp/composer-asset-plugin:~1.1"
     - composer install
     - cp phpunit.xml.dist phpunit.xml
 
 install:
     - travis_retry composer self-update && composer --version
 
-
 script:
     phpunit --configuration phpunit.xml
+
+notifications:
+    on_success: never
+    on_failure: always
